# graphql-app-example

./: Cargo.toml  README.md  Rocket.toml  graphql-app-example-test  schema.graphql
.github/: dependabot.yml
migrations/2019-05-23-172540_create_initial_tables/: down.sql  up.sql
src/: graphql.rs  main.rs  models.rs  schema.rs  tests.rs
src/models/: pagination.rs
