[package]
name = "graphql-app-example"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.4.1", features = ["postgres", "r2d2"] }
juniper = "0.12.0"
juniper-from-schema = "^0.3"
juniper_rocket = "0.4"
r2d2 = "0.8.5"
serde_json = "1.0.39"
dotenv = "0.14.1"
juniper-eager-loading = "^0.2"

[dev-dependencies]
assert-json-diff = "1.0.0"
diesel-factories = "0.1.0"
