[package]
name = "graphql-app-example"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
diesel = { version = "1", features = ["postgres", "r2d2"] }
juniper = "0.14"
juniper-from-schema = "0.5"
juniper_rocket = "0.5"
r2d2 = "0.8"
serde_json = "1"
dotenv = "0.15"
juniper-eager-loading = "0.5"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool"]

[dev-dependencies]
assert-json-diff = "1"
diesel-factories = "1"
